--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,1 +1,42 @@
 @charset "UTF-8";
+
+*{
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    padding: 0px;
+    margin: 0px;
+    box-sizing: border-box;
+}
+
+body, html {
+    background-color: blanchedalmond;
+    height: 100vh;
+    width: 100vw;
+}
+
+main {
+    position: relative;
+    height: 100vh;
+    width: 100vw;
+}
+#login {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 10px;
+    overflow: hidden;
+    background-color: rgb(255, 252, 252);
+}
+
+#login > #img {
+    display: block;
+    background: blanchedalmond url(../imagens/close-up-frost-pine-grass-mountain-hill-with-sun-light.jpg) no-repeat;
+    background-size: cover;
+    background-position: center center;
+    height: 200px;
+}
+
+#form {
+    display: block;
+    padding: 14px;
+}
