--- a/estilo/style.css
+++ b/estilo/style.css
@@ -11,6 +11,7 @@ body, html {
     background-color: blanchedalmond;
     height: 100vh;
     width: 100vw;
+    background-image: linear-gradient(to bottom, #CB9155, #352219);
 }
 
 main {
@@ -30,13 +31,74 @@ main {
 
 #login > #img {
     display: block;
-    background: blanchedalmond url(../imagens/close-up-frost-pine-grass-mountain-hill-with-sun-light.jpg) no-repeat;
+    background: blanchedalmond url(../imagens/mel-elias-0T8_DJHLBL8-unsplash.jpg) no-repeat;
     background-size: cover;
-    background-position: center center;
-    height: 200px;
+    background-position: center left;
+    height: 350px;
 }
 
 #form {
     display: block;
     padding: 14px;
+}
+
+#form > h1 {
+    text-align: center;
+    margin-bottom: 10px;
+    text-shadow: 1px 1px 1px rgba(105, 104, 104, 0.041);
+}
+
+#form > p {
+    font-size: .9em;
+}
+
+div.campo {
+    height: 30px;
+    margin-bottom: 5px;
+    background-color: #cbaf55;
+    box-shadow: 1px 1px 1px #5f4d27;
+    border-radius: 5px;
+}
+
+div > span {
+    color: white;
+}
+
+form > input[type = submit] {
+    display: block;
+    width: 100%;
+    height: 30px;
+    margin: auto;
+    margin-top: 6px;
+    font-size: 1em;
+    background-color: #be7655;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.267);
+    border: none;
+    border-radius: 5px;
+}
+
+form > input[type = submit]:hover {
+    background-color: #663f2d;
+    color: azure;
+}
+
+form > a.senhaf {
+    display: block;
+    width: 80%;
+    height: 30px;
+    margin: auto;
+    margin-top: 6px;
+    font-size: 1em;
+    text-align: center;
+    text-decoration: none;
+    background-color: transparent;
+    color: black;
+    box-shadow: 2px 2px 1px#be7655;
+    border-radius: 5px;
+}
+
+form > a.senhaf:hover {
+    background-color: #693c27;
+    color: azure;
+    box-shadow: none;
 }
